...
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints"
        android:src="@drawable/uploadimg"
        />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imgProfile"
...
